[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menu/Title Screen.gd" type="Script" id=1]
[ext_resource path="res://Assets/Title screen 2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/alagard_by_pix3m-d6awiwp.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 33
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Node" type="Node2D"]
scale = Vector2( 1, 1.28 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 511.292, 300.006 )
scale = Vector2( 1.27997, 1.19998 )
texture = ExtResource( 2 )

[node name="New" type="Button" parent="."]
margin_left = 190.0
margin_top = 338.661
margin_right = 303.0
margin_bottom = 376.661
focus_neighbour_top = NodePath("../Exit")
focus_neighbour_bottom = NodePath("../Load")
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_hover = Color( 0.831373, 0.898039, 0.0627451, 1 )
text = "NEW GAME"
flat = true

[node name="Load" type="Button" parent="."]
margin_left = 190.0
margin_top = 405.854
margin_right = 303.0
margin_bottom = 443.854
focus_neighbour_top = NodePath("../New")
focus_neighbour_bottom = NodePath("../Credits")
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_hover = Color( 0.831373, 0.898039, 0.0627451, 1 )
text = "LOAD GAME"
flat = true

[node name="Credits" type="Button" parent="."]
pause_mode = 2
margin_left = 190.0
margin_top = 478.137
margin_right = 334.0
margin_bottom = 516.137
focus_neighbour_top = NodePath("../Load")
focus_neighbour_bottom = NodePath("../Exit")
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_hover = Color( 0.831373, 0.898039, 0.0627451, 1 )
text = "CREDITS"
flat = true

[node name="Exit" type="Button" parent="."]
margin_left = 190.0
margin_top = 536.895
margin_right = 275.0
margin_bottom = 574.895
focus_neighbour_top = NodePath("../Credits")
focus_neighbour_bottom = NodePath("../New")
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_hover = Color( 0.831373, 0.898039, 0.0627451, 1 )
text = "EXIT"
flat = true

[connection signal="pressed" from="New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
